--- a/block-BHaaax/index.html
+++ b/block-BHaaax/index.html
@@ -7,26 +7,40 @@
     <link rel="stylesheet" href="assets/stylesheet/style.css">
 </head>
 <body>
-    <header>
-        <h1>Head</h1>
-        <nav class="nav">
-            <a href="#">Home</a>
-            <a href="#">Service</a>
-            <a href="#">contact</a>
-        </nav>
-    </header><!--
-    --><article>
-        <h2>Inky Black, Polluted Rivers Seep into Ocean After Hurricane Florence in NASA Image</h2>
-        <p>Over 8 trillion gallons of rain fell on North Carolina during Hurricane Florence, according to an unofficial estimate reported by the National Weather Service in Raleigh.</p>
-        <p>As the floodwaters rose, they churned up pollution and debris, which then was fed into the swollen rivers of North Carolina, a new NASA image reveals. Snapped on Sept. 19 by NASA's Operational Land Imager on the Landsat 8 satellite, this image shows how Hurricane Florence affected water quality: the White Oak River, New River and Adams Creek spew darkened water into an equally discolored Atlantic Ocean. [Hurricane Florence: Photos of a Monster Storm]</p>
-        <p>Organic matter such as leaves, roots or bark contains pigments and chemicals that can color the water different shades, based on how much is in the water. In this image, the darker brown colors represent higher concentrations of contaminants, while the blues and greens have lower concentrations of contaminants.</p>    
-    </article><!--
-    --><article>
-        <h2>Factory Automation</h2>
-        <img src="assets/images/pollution.jpg" alt="pollution image">
-    </article><!--
-    --><footer>
-        <p>Footer</p>
-    </footer>
+    <header class="header">
+        <div class="container">
+            <a class="brand" href="#"> 
+                <img src="assets/images/Logo..png" alt="Brand Logo">
+            </a>
+            <nav class="nav">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">contact</a>
+            </nav>
+        </div>
+    </header> 
+    <main>
+        <article class="article">
+            <div class="container">
+                <div class="col article-col">
+                    <h1 class="article-heading">Inky Black, Polluted Rivers Seep into Ocean After Hurricane Florence</h2>
+                        <p class="article-text">Over 8 trillion gallons of rain fell on North Carolina during Hurricane Florence, according to an unofficial estimate reported by the National Weather Service in Raleigh.</p>
+                        <p class="article-text">As the floodwaters rose, they churned up pollution and debris, which then was fed into the swollen rivers of North Carolina, a new NASA image reveals. Snapped on Sept. 19 by NASA's Operational Land Imager on the Landsat 8 satellite, this image shows how Hurricane Florence affected water quality: the White Oak River, New River and Adams Creek spew darkened water into an equally discolored Atlantic Ocean. [Hurricane Florence: Photos of a Monster Storm]</p>
+                </div>
+                <div class="col">
+                    <img class="article-img" src="assets/images/pollution.jpg" alt="Ocean pollution">
+                </div>
+            </div>
+        </article>
+    </main>  
+    <footer class="footer">
+        <div class="continer">
+            <nav>
+                <a href="#">Facebook</a>
+                <a href="#">Twitter</a>
+                <a href="#">Instagram</a>
+            </nav>
+        </div>
+    </footer>     
 </body>
 </html>
