--- a/block-BHaaba/index.html
+++ b/block-BHaaba/index.html
@@ -1,8 +1,52 @@
-<!-- ### Exercise 2
-
-1. Create a simple page having a header, main content, and a footer.
-
-2. Inside the header keep the brand name to the left and all the navigation to the right.
-
-3. Inside the main content crate three columns. In each column take one image and a paragraph below the image.
-4. Using float is necessary. -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exercise 2</title>
+    <link rel="stylesheet" href="assets/stylesheet/style.css">
+</head>
+<body>
+    <header class="header">
+        <div class="container">
+            <a class="brand" href="#">
+                <img src="assets/media/logo.png" alt="logo">
+            </a>
+            <nav class="nav">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section class="clearfix">
+            <article class="article">
+                <div class="container">
+                    <img class="img" src="assets/media/amazing-animal-beautiful-beautifull.jpg" alt="Picture">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum qui voluptas id doloremque, ex minima culpa corrupti. Eaque, optio praesentium error, veritatis illo non quae hic nemo voluptas, suscipit accusantium.</p>
+                </div>
+            </article>
+            <article class="article">
+                <div class="container">
+                    <img class="img" src="assets/media/images.jpg" alt="Picture">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum qui voluptas id doloremque, ex minima culpa corrupti. Eaque, optio praesentium error, veritatis illo non quae hic nemo voluptas, suscipit accusantium.</p>
+                </div>
+            </article>
+            <article class="article">
+                <div class="container">
+                    <img class="img" src="assets/media/sunset.jpg" alt="Picture">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum qui voluptas id doloremque, ex minima culpa corrupti. Eaque, optio praesentium error, veritatis illo non quae hic nemo voluptas, suscipit accusantium.</p>
+                </div>
+            </article> 
+        </section>
+    </main>
+    <footer>
+        <nav class="footer-nav">
+            <a href="#">Facebook</a>
+            <a href="#">Twitter</a>
+            <a href="#">Instagram</a>
+        </nav>
+    </footer>
+</body>
+</html>
