--- a/block-BHaabd/index.html
+++ b/block-BHaabd/index.html
@@ -1,7 +1,32 @@
-<!-- 
-### Create a page according to the layout shown below
-
-![Positioning Content Exercise 1](https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/positioning-content/ex-1.png)
-
-- Using CSS resets is necessary.
-- Use semantic tags and keep the nesting and indentation proper. -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Assisgnment 1 Positioning content</title>
+    <link rel="stylesheet" href="assets/stylesheet/styl.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1 class="header">Extracts from "Our Cats, by Harrison Weir"</h1>
+        </div>
+    </header>
+    <main class="main">
+        <div class="container">
+            <h2 class="header2">Usefulness of Cats</h2>
+            <p class="col left">Introductory <br> The First Cat Show <br> Hadits <br> Trained Cats <br> Usefulness of Cats </p>
+            <p class="col right">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur fugit repudiandae nisi, magnam nam repellat quidem vel facere ipsa et similique eligendi perferendis qui natus nostrum aut, non laudantium porro.</p>
+        </div>
+        <div class="container">
+            <div class="cat">
+                <img src="assets/media/cat.jpg" alt="cat image">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, rem numquam? Excepturi, placeat laudantium? Blanditiis, facilis eligendi consectetur enim dolorum ex dolorem nostrum, sequi, in aliquid optio accusamus architecto quisquam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae consectetur nemo distinctio, consequatur voluptate magnam incidunt provident aspernatur exercitationem illum eum voluptatum adipisci fuga et! Ratione minus iste ut nostrum!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae laborum molestias nesciunt soluta accusamus! Sint, numquam nam. Mollitia, facere facilis. Sunt explicabo beatae unde, sequi inventore nostrum facilis dolores natus.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi soluta aliquid quidem, officia nesciunt repudiandae deserunt ut iusto quasi. Similique quasi ex error a! Quia, explicabo! Nostrum atque ipsum eaque.</p>
+            </div>
+        </div>
+    </main>
+</body>
+</html>
