--- a/block-BHaabd/index.html
+++ b/block-BHaabd/index.html
@@ -12,20 +12,28 @@
             <h1 class="header">Extracts from "Our Cats, by Harrison Weir"</h1>
         </div>
     </header>
-    <main class="main">
-        <div class="container">
-            <h2 class="header2">Usefulness of Cats</h2>
-            <p class="col left">Introductory <br> The First Cat Show <br> Hadits <br> Trained Cats <br> Usefulness of Cats </p>
-            <p class="col right">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur fugit repudiandae nisi, magnam nam repellat quidem vel facere ipsa et similique eligendi perferendis qui natus nostrum aut, non laudantium porro.</p>
-        </div>
-        <div class="container">
-            <div class="cat">
-                <img src="assets/media/cat.jpg" alt="cat image">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, rem numquam? Excepturi, placeat laudantium? Blanditiis, facilis eligendi consectetur enim dolorum ex dolorem nostrum, sequi, in aliquid optio accusamus architecto quisquam.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae consectetur nemo distinctio, consequatur voluptate magnam incidunt provident aspernatur exercitationem illum eum voluptatum adipisci fuga et! Ratione minus iste ut nostrum!</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae laborum molestias nesciunt soluta accusamus! Sint, numquam nam. Mollitia, facere facilis. Sunt explicabo beatae unde, sequi inventore nostrum facilis dolores natus.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi soluta aliquid quidem, officia nesciunt repudiandae deserunt ut iusto quasi. Similique quasi ex error a! Quia, explicabo! Nostrum atque ipsum eaque.</p>
-            </div>
+    <main>
+        <div class="container main">
+            <aside class="col left">
+                <p>Introductory</p>
+                <p>The First Cat Show</p>      
+                <p>Hadits</p> 
+                <p>Trained Cats</p>
+                <p>Usefulness of Cats</p>
+            </aside>
+            <aside class="col right">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum expedita magni rem laudantium molestiae corporis dolor ea voluptates sint sequi vero cupiditate sapiente iste deleniti consequuntur aspernatur nemo, est repudiandae!</p>
+            </aside>
+            <article>
+                <div class="cat">
+                    <h2 class="header2">Usefulness of Cats</h2>
+                    <img src="assets/media/cat.jpg" alt="cat image">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, rem numquam? Excepturi, placeat laudantium? Blanditiis, facilis eligendi consectetur enim dolorum ex dolorem nostrum, sequi, in aliquid optio accusamus architecto quisquam.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae consectetur nemo distinctio, consequatur voluptate magnam incidunt provident aspernatur exercitationem illum eum voluptatum adipisci fuga et! Ratione minus iste ut nostrum!</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae laborum molestias nesciunt soluta accusamus! Sint, numquam nam. Mollitia, facere facilis. Sunt explicabo beatae unde, sequi inventore nostrum facilis dolores natus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi soluta aliquid quidem, officia nesciunt repudiandae deserunt ut iusto quasi. Similique quasi ex error a! Quia, explicabo! Nostrum atque ipsum eaque.</p>
+                </div>
+            </article>
         </div>
     </main>
 </body>
